config org-roam to support MoC

--- a/Emacs.org
+++ b/Emacs.org
@@ -454,18 +454,109 @@ This allows you to directly drag a image to the org mode buffer.
 *** TODO Set image download path
 ** Org Roam
 #+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
+  ;; ─── Ensure MoC structure ───
+  (defvar my/org-roam-root
+    "/Users/wgw/Library/CloudStorage/Dropbox/RoamNotes"
+    "Root directory for my Org-Roam files.")
+
+  (defvar my/moc-dir
+    (expand-file-name "mocs/" my/org-roam-root)
+    "Directory where per-domain MoC files live.")
+
+  (defvar my/moc-file
+    (expand-file-name "00-index.org" my/org-roam-root)
+    "Master MoC index file.")
+
+  (unless (file-directory-p my/moc-dir)
+    (message "Creating MoC dir %s" my/moc-dir)
+    (make-directory my/moc-dir t))
+  (unless (file-exists-p my/moc-file)
+    (message "Creating master MoC %s" my/moc-file)
+    (with-temp-file my/moc-file
+      (insert "#+title: Master Index\n\n* Unsorted\n")))
+#+end_src
+
+
+#+begin_src  emacs-lisp :tangle ./init.el :mkdirp yes
+(defun my/ensure-and-insert-into-moc (heading link)
+  "Ensure HEADING exists in master MoC, then append LINK under it."
+  (with-current-buffer (find-file-noselect my/moc-file)
+    (goto-char (point-min))
+    (unless (re-search-forward (format "^*+ %s" (regexp-quote heading)) nil t)
+      (goto-char (point-max))
+      (insert (format "\n* %s\n" heading)))
+    (goto-char (point-min))
+    (re-search-forward (format "^*+ %s" (regexp-quote heading)) nil t)
+    (forward-line)
+    (insert (format "** %s\n" link))
+    (save-buffer)))
+#+end_src
+
+#+begin_src emacs-lisp :tangle ./init.el :mkdirp yes  
+  (defun my/roam-moc-on-filetags-save ()
+    "After saving an Org-Roam file, sync its #+filetags: into the master MoC."
+    (when (and (eq major-mode 'org-mode)
+               (string-prefix-p my/org-roam-root (buffer-file-name)))
+      ;; find #+filetags: line
+      (save-excursion
+        (goto-char (point-min))
+        (when (re-search-forward "^#\\+filetags:[ \t]*\\(.+\\)$" nil t)
+          (let* ((tags (split-string (match-string 1) "[: \t]+" t))
+                 (node (org-roam-node-at-point))
+                 (id   (org-roam-node-id node))
+                 (title (org-roam-node-title node))
+                 (link (format "[[id:%s][%s]]" id title)))
+            ;; purge old entries for this note
+            (with-current-buffer (find-file-noselect my/moc-file)
+              (goto-char (point-min))
+              ;; Loop over every occurrence of this note’s ID
+              (while (re-search-forward (format "^\\*\\* .*\\[\\[id:%s\\]" id) nil t)
+                (let* ((entry-beg (match-beginning 0))
+                       ;; Find the parent heading of this entry
+                       (heading-beg (save-excursion
+                                      (org-back-to-heading t)
+                                      (point)))
+                       ;; Determine end of that subtree
+                       (subtree-end (save-excursion
+                                      (goto-char heading-beg)
+                                      (org-end-of-subtree t t)
+                                      (point))))
+                  ;; 1) Kill the entry line
+                  (goto-char entry-beg)
+                  (kill-whole-line)
+                  ;; 2) If no other “** ” lines remain under that heading, remove the whole subtree
+                  (save-excursion
+                    (goto-char heading-beg)
+                    (let ((has-child (re-search-forward "^\\*\\* " subtree-end t)))
+                      (unless has-child
+                        ;; remove heading + any blank lines below
+                        (goto-char heading-beg)
+                        (org-cut-subtree))))
+                  (save-buffer))
+                ;; insert under each tag heading
+                (dolist (tag tags)
+                  (my/ensure-and-insert-into-moc
+                   (capitalize (replace-regexp-in-string "_" " " tag))
+                   link))
+                )))))
+
+      (add-hook 'after-save-hook #'my/roam-moc-on-filetags-save)
+#+end_src
+
+#+begin_src emacs-lisp :tangle ./init.el :mkdirp yes
   (use-package org-roam
     :ensure t
     :init
     (setq org-roam-v2-ack t)
     :custom 
-    (org-roam-directory "/Users/wgw/Library/CloudStorage/Dropbox/RoamNotes")
+    (org-roam-directory my/org-roam-root)
     (org-roam-completion-everywhere t)
-      (org-roam-capture-templates
-   '(("d" "default" plain
-      "%?"
-      :if-new (file+head "%<%Y%m%d%H%M%S>-${slug}.org" "#+title: ${title}\n#+date: %U\n")
-      :unnarrowed t)))
+    (org-roam-capture-templates
+     '(("d" "default" plain "%?"
+        :if-new (file+head "%<%Y%m%d%H%M%S>-${slug}.org"
+                           "#+title: ${title}\n#+date: %U\n#+filetags: :${tag}:\n\n")
+        :immediate-finish t
+        :unnarrowed t)))
     :bind (("C-c n l" . org-roam-buffer-toggle)
            ("C-c n f" . org-roam-node-find)
            ("C-c n i" . org-roam-node-insert)
@@ -483,11 +574,27 @@ This allows you to directly drag a image to the org mode buffer.
     (setq org-roam-node-display-template (concat "${title:*} " (propertize "${tags:10}" 'face 'org-tag)))
     (require 'org-roam-dailies) ;; Ensure the keymap is available
     (require 'org-roam-export)
-    (org-roam-db-autosync-mode))
+    (org-roam-db-autosync-mode)
+    (defun my/roam-moc-after-capture (info)
+      "Index every new Org-Roam capture in the master MoC by its #+filetags:."
+      (let* ((node  (org-roam-node-from-info info))
+             (tags  (org-roam-node-file-tags node))
+             (id    (org-roam-node-id node))
+             (title (org-roam-node-title node))
+             (link  (format "[[id:%s][%s]]" id title)))
+        (when tags
+          (with-current-buffer (find-file-noselect my/moc-file)
+            ;; for each tag, ensure link exists
+            (dolist (tag tags)
+              (my/ensure-and-insert-into-moc
+               (capitalize (replace-regexp-in-string "_" " " tag))
+               link))))))
+    (add-hook 'org-roam-capture-after-finalize-hook #'my/roam-moc-after-capture)
+    ) 
 
   (use-package ox-jekyll-md)
-;; This add  extra options of converstion org file to jekyll posts
-;; in markdown format.  
+  ;; This add  extra options of converstion org file to jekyll posts
+  ;; in markdown format.  
 #+end_src
 
 *** Org Roam template
